feat: 부하테스트 UI + API 완성 (Actuator, LoadTest simulate, 프론트 연결)